# video_photo_sharing_app

./: .gitignore  Procfile  README.md  frontend.py  pyproject.toml  requirements.txt
app/: app.py  db.py  schemas.py  users.py
